# kdisplay

./: CMakeLists.txt  README  TODO  kdisplay.kdev4
doc/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  details.ui  kdisplay.cpp  kdisplay.desktop  kdisplay.h  kdisplay.kcfg  kdisplayui.rc  kdisplayview.cpp  kdisplayview.h  kdisplayview_base.ui  kdpygraphicsview.cpp  kdpygraphicsview.h  kdpymainwidget.cpp  kdpymainwidget.h  kdpyoutputgraphicsgroup.cpp  kdpyoutputgraphicsgroup.h  kdpyoutputwidget.cpp  kdpyoutputwidget.h  main.cpp  settings.kcfgc
